# readr

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  project.yml  readme.md
.github/workflows/: ci.yml  pages.yml  release.yml  testflight-beta-setup.yml  testflight.yml
App/: AppModel.swift  ReadrApp.swift
App/Article/: ArticleComposeView.swift  ArticleStudioView.swift  ArticleViewModel.swift  MarkdownDocument.swift
App/Ask/: AskPanelView.swift  AskViewModel.swift
App/Auth/: LoopbackHTTPServer.swift  OAuthCoordinator.swift
App/Design/: Theme.swift
App/Parsers/: EPUBFileParser.swift  PDFCoverRenderer.swift
App/Settings/: ProviderSettingsView.swift  SettingsModel.swift
App/Testing/: UITestStubProvider.swift
App/Views/: BookCoverView.swift  LayoutPaginator.swift  LibraryView.swift  PDFReaderView.swift  PagedChapterView.swift  (+2 more)
SnapshotTests/: LayoutPaginatorTests.swift  MacSnapshotTests.swift  ReaderTypographyTests.swift
UITests/: ReadrAppUITests.swift  ReadrFlowUITests.swift
api/: main.py  pyproject.toml
api/ingest/: csv_import.py
api/scoring/: brain.py  timeline.py
api/tests/: conftest.py  test_autoresearch.py  test_endpoints.py  test_ingest.py  test_scoring.py  test_tribe_client.py
api/tribe/: modal_app.py
assets/: README.md
docs/: ARCHITECTURE.md  AUTH.md  DESIGN.md  DEVELOPMENT-PLAN.md  EPUB-CONFORMANCE-NOTES.md  ROADMAP.md  USER-JOURNEYS.md
launch/: SMOKE-TEST.md  production-readiness.md  security-audit.md
scripts/: asc_beta_setup.py  generate_seed_assets.py
site/: README.md  index.html  privacy.html
web/: package-lock.json
(+110 files in other folders)
