[project]
name = "cbt-api"
version = "0.1.0"
description = "Brain-predicted virality API (TRIBE v2 + autoresearch)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pillow>=10.4",
    "opencv-python-headless>=4.10",
    "imageio>=2.35",
    "imageio-ffmpeg>=0.5",
    "httpx>=0.27",
    "anyio>=4.4",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "nilearn>=0.10.4",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
tribe = [
    "torch>=2.4",
    "transformers>=4.45",
    "huggingface-hub>=0.25",
]
modal = ["modal>=0.66"]
dev = ["pytest>=8.3", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "tribe*", "ingest*", "scoring*", "autoresearch*"]
